--- a/Pages/about.html
+++ b/Pages/about.html
@@ -6,18 +6,18 @@
     <title>About Amacusi Farming</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
 
       <!-- Navigation -->
       <header>
         <div class="logo">
-            <img src="AmacusiLogo.png" alt="Amacusi Trading Business">
+            <img src="../Images/AmacusiLogo.png" alt="Amacusi Trading Business">
         </div>
         <nav>
             <ul>
-                <li><a href="Main.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Products.html">Products</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="#">Contact</a></li>
@@ -72,7 +72,7 @@
     <div class="practice-gallery">
         <!-- 1. Free-Range Poultry -->
         <div class="practice-item">
-            <img src="freeRangeChicken.jpg" alt="Chickens roaming outdoors">
+            <img src="../Images/freeRangeChicken.jpg" alt="Chickens roaming outdoors">
             <div class="practice-text">
                 <h3><i class="fas fa-dove"></i> Free-Range Poultry</h3>
                 <p>Our chickens enjoy daily outdoor access with:</p>
@@ -86,7 +86,7 @@
 
         <!-- 3. Grass-Fed Beef -->
         <div class="practice-item">
-            <img src="Cows.jpg" alt="Cattle grazing">
+            <img src="../Images/Cows.jpg" alt="Cattle grazing">
             <div class="practice-text">
                 <h3><i class="fas fa-leaf"></i> Grass-Fed Beef</h3>
                 <p>Our cattle thrive on:</p>
@@ -109,12 +109,12 @@
                     <li>Rainwater harvesting for animal drinking</li>
                 </ul>
             </div>
-            <img src="compostingSystem.jpg" alt="Compost pile on farm">
+            <img src="../Images/compostingSystem.jpg" alt="Compost pile on farm">
         </div>
 
         <!-- 5. Natural Egg Production -->
         <div class="practice-item">
-            <img src="naturalEgg.jpg" alt="Chickens in nesting boxes">
+            <img src="../Images/naturalEgg.jpg" alt="Chickens in nesting boxes">
             <div class="practice-text">
                 <h3><i class="fas fa-egg"></i> Ethical Egg Production</h3>
                 <p>Our hens lay eggs naturally:</p>
