--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -8,17 +8,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../css/products.css" />
   </head>
   <body>
     <!-- Existing Header (no additional styling) -->
     <header>
       <div class="logo">
-        <img src="AmacusiLogo.png" alt="Amacusi Trading Business" />
+        <img src="../Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
       </div>
       <nav>
         <ul>
-          <li><a href="Main.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="products.html" class="active">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -135,9 +135,9 @@
       </div>
     </footer>
 
+    <!-- Change from module to regular scripts -->
     <script src="cart.js"></script>
-    <script src="admin/product.js"></script>
-    <script src="admin/products-display.js"></script>
-    <script src="../Amacusi-Farming/admin/products-display.js"></script>
+    <script src="../admin/product.js"></script>
+    <script src="../admin/products-display.js"></script>
   </body>
 </html>
