--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="../index.css" />
+    <link rel="stylesheet" href="../css/index.css" />
   </head>
   <body>
     <!-- Navigation -->
@@ -28,8 +28,8 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="Products.html">Products</a></li>
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="../pages/Products.html">Products</a></li>
+          <li><a href="../pages/about.html">About Us</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
