--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="../pages/Products.html">Products</a></li>
-          <li><a href="../pages/about.html">About Us</a></li>
+          <li><a href="pages/Products.html">Products</a></li>
+          <li><a href="pages/about.html">About Us</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
@@ -49,10 +49,10 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="slideshow">
-        <img src="../Images/SmallChicks.jpg" class="slide active" />
-        <img src="../Images/Cows.jpg" class="slide" />
-        <img src="../Images/Eggs.jpg" class="slide" />
-        <img src="../Images/Pigs.jpg" class="slide" />
+        <img src="Images/SmallChicks.jpg" class="slide active" />
+        <img src="Images/Cows.jpg" class="slide" />
+        <img src="Images/Eggs.jpg" class="slide" />
+        <img src="Images/Pigs.jpg" class="slide" />
       </div>
       <div class="hero-text animate__animated animate__fadeIn">
         <h1 data-aos="fade-left" data-aos-duration="1900" data-aos-delay="200">
