--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation -->
     <header>
       <div class="logo">
-        <img src="../Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
+        <img src="Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
       </div>
       <nav>
         <ul>
