--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="pages/Products.html">Products</a></li>
-          <li><a href="pages/about.html">About Us</a></li>
+          <li><a href="Pages/Products.html">Products</a></li>
+          <li><a href="Pages/about.html">About Us</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
