--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -137,7 +137,7 @@
 
     <!-- Change from module to regular scripts -->
     <script src="cart.js"></script>
-    <script src="../admin/product.js"></script>
-    <script src="../admin/products-display.js"></script>
+    <script src="admin/product.js"></script>
+    <script src="admin/products-display.js"></script>
   </body>
 </html>
