--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
+        <img src="../Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
       </div>
       <nav>
         <ul>
@@ -271,6 +271,6 @@
       <!-- Your existing footer content -->
     </footer>
 
-    <script src="cart.js"></script>
+    <script src="../cart.js"></script>
   </body>
 </html>
