--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -136,7 +136,7 @@
     </footer>
 
     <!-- Change from module to regular scripts -->
-    <script src="cart.js"></script>
+    <script src="../cart.js"></script>
     <script src="../admin/product.js"></script>
     <script src="../admin/products-display.js"></script>
   </body>
