--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -271,6 +271,7 @@
       <!-- Your existing footer content -->
     </footer>
 
-    <script src="../cart.js"></script>
+    <script src="/cart.js"></script>
+
   </body>
 </html>
