--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -271,7 +271,6 @@
       <!-- Your existing footer content -->
     </footer>
 
-    <script src="/cart.js"></script>
-
+    <script src="../cart.js"></script>
   </body>
 </html>
