--- a/Pages/index.html
+++ b/Pages/index.html
@@ -28,15 +28,15 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="../pages/Products.html">Products</a></li>
-          <li><a href="../pages/about.html">About Us</a></li>
+          <li><a href="../Pages/Products.html">Products</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
 
       <!-- Icons on the right -->
       <div class="header-icons">
-        <a href="login.html" aria-label="Login">
+        <a href="../pages/signUp.html" aria-label="Login">
           <i class="fas fa-user"></i>
         </a>
         <a href="cart.html" aria-label="Shopping Cart">
@@ -63,7 +63,7 @@
           needs.
         </p>
         <a
-          href="#"
+          href="../Pages/Products.html"
           class="cta-button animate__animated animate__pulse animate__infinite"
           >Browse Products</a
         >
