--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -52,7 +52,7 @@
           <button class="filter-btn active" data-category="all">
             All Products
           </button>
-          <button class="filter-btn" data-category="poultry">Poultry</button>
+          <button class="filter-btn" data-category="poultry">Chicken</button>
           <button class="filter-btn" data-category="beef">Beef</button>
           <button class="filter-btn" data-category="pork">Pork</button>
           <button class="filter-btn" data-category="eggs">Eggs</button>
@@ -136,7 +136,7 @@
     </footer>
 
     <!-- Change from module to regular scripts -->
-    <script src="cart.js"></script>
+    <script src="../cart.js"></script>
     <script src="../admin/product.js"></script>
     <script src="../admin/products-display.js"></script>
   </body>
