--- a/admin/admin.html
+++ b/admin/admin.html
@@ -20,7 +20,7 @@
       <!-- Sidebar -->
       <aside class="sidebar">
         <div class="sidebar-header">
-          <img src="../Images/AmacusiLogo.png" alt="Amacusi Logo" />
+          <img src="Images/AmacusiLogo.png" alt="Amacusi Logo" />
           <h3>Amacusi Admin</h3>
         </div>
 
@@ -32,7 +32,7 @@
               >
             </li>
             <li>
-              <a href="../admin/orders.html"
+              <a href="admin/orders.html"
                 ><i class="fas fa-shopping-bag"></i> Orders</a
               >
             </li>
@@ -45,7 +45,7 @@
               <a href="#"><i class="fas fa-users"></i> Customers</a>
             </li>
             <li>
-              <a href="../admin/reports.html"
+              <a href="admin/reports.html"
                 ><i class="fas fa-chart-bar"></i> Reports</a
               >
             </li>
@@ -62,7 +62,7 @@
           <h1>Product Management</h1>
 
           <div class="admin-user">
-            <img src="../Images/log_8801574.png" alt="Admin User" />
+            <img src="Images/log_8801574.png" alt="Admin User" />
             <div class="admin-user-info">
               <h4>Admin User</h4>
               <p>Super Admin</p>
@@ -247,8 +247,8 @@
       </div>
     </div>
 
-    <script type="module" src="../admin/product.js"></script>
+    <script type="module" src="admin/product.js"></script>
 
-    <script src="../admin/admin.js"></script>
+    <script src="admin/admin.js"></script>
   </body>
 </html>
