--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -8,13 +8,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="../css/products.css" />
+    <link rel="stylesheet" href="css/products.css" />
   </head>
   <body>
     <!-- Header with Hamburger Menu -->
     <header>
       <div class="logo">
-        <img src="../Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
+        <img src="Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
       </div>
 
       <!-- Hamburger Button -->
