--- a/admin/orders.html
+++ b/admin/orders.html
@@ -12,15 +12,15 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Open+Sans:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../admin/admin.css" />
-    <link rel="stylesheet" href="../css/orders.css" />
+    <link rel="stylesheet" href="admin/admin.css" />
+    <link rel="stylesheet" href="css/orders.css" />
   </head>
   <body>
     <div class="admin-container">
       <!-- Sidebar -->
       <aside class="sidebar">
         <div class="sidebar-header">
-          <img src="../Images/AmacusiLogo.png" alt="Amacusi Logo" />
+          <img src="Images/AmacusiLogo.png" alt="Amacusi Logo" />
           <h3>Amacusi Admin</h3>
         </div>
 
@@ -45,7 +45,7 @@
               <a href="#"><i class="fas fa-users"></i> Customers</a>
             </li>
             <li>
-              <a href="../admin/reports.html"
+              <a href="admin/reports.html"
                 ><i class="fas fa-chart-bar"></i> Reports</a
               >
             </li>
@@ -62,7 +62,7 @@
           <h1>Order Management</h1>
 
           <div class="admin-user">
-            <img src="../admin-avatar.jpg" alt="Admin User" />
+            <img src="admin-avatar.jpg" alt="Admin User" />
             <div class="admin-user-info">
               <h4>Admin User</h4>
               <p>Super Admin</p>
