--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -8,16 +8,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="../css/cart.css" />
+    <link rel="stylesheet" href="css/cart.css" />
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="../Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
+        <img src="Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
       </div>
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
