--- a/admin/reports.html
+++ b/admin/reports.html
@@ -12,8 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Open+Sans:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../admin/admin.css" />
-    <link rel="stylesheet" href="../admin/reports.css" />
+    <link rel="stylesheet" href="admin/admin.css" />
+    <link rel="stylesheet" href="admin/reports.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
@@ -23,7 +23,7 @@
       <!-- Sidebar -->
       <aside class="sidebar">
         <div class="sidebar-header">
-          <img src="../Images/AmacusiLogo.png" alt="Amacusi Logo" />
+          <img src="Images/AmacusiLogo.png" alt="Amacusi Logo" />
           <h3>Amacusi Admin</h3>
         </div>
 
@@ -62,7 +62,7 @@
         <div class="admin-header">
           <h1>Reports Dashboard</h1>
           <div class="admin-user">
-            <img src="../Images/log_8801574.png" alt="Admin User" />
+            <img src="Images/log_8801574.png" alt="Admin User" />
             <div class="admin-user-info">
               <h4>Admin User</h4>
               <p>Super Admin</p>
@@ -373,7 +373,7 @@
       </main>
     </div>
 
-    <script type="module" src="../admin/report.js"></script>
-    <script src="../admin/admin.js"></script>
+    <script type="module" src="admin/report.js"></script>
+    <script src="admin/admin.js"></script>
   </body>
 </html>
