--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
+        <img src="../Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
       </div>
       <nav>
         <ul>
