--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -14,7 +14,7 @@
     <!-- Header with Hamburger Menu -->
     <header>
       <div class="logo">
-        <img src="Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
+        <img src="../Images/AmacusiLogo.png" alt="Amacusi Trading Business" />
       </div>
 
       <!-- Hamburger Button -->
