--- a/admin/orders.html
+++ b/admin/orders.html
@@ -12,15 +12,15 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Open+Sans:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="admin/admin.css" />
-    <link rel="stylesheet" href="css/orders.css" />
+    <link rel="stylesheet" href="admin.css" />
+    <link rel="stylesheet" href="../css/orders.css" />
   </head>
   <body>
     <div class="admin-container">
       <!-- Sidebar -->
       <aside class="sidebar">
         <div class="sidebar-header">
-          <img src="Images/AmacusiLogo.png" alt="Amacusi Logo" />
+          <img src="../Images/AmacusiLogo.png" alt="Amacusi Logo" />
           <h3>Amacusi Admin</h3>
         </div>
 
