--- a/admin/orders.html
+++ b/admin/orders.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Open+Sans:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="admin.css" />
+    <link rel="stylesheet" href="../admin/admin.css" />
     <link rel="stylesheet" href="../css/orders.css" />
   </head>
   <body>
