--- a/admin/admin.html
+++ b/admin/admin.html
@@ -20,7 +20,7 @@
       <!-- Sidebar -->
       <aside class="sidebar">
         <div class="sidebar-header">
-          <img src="Images/AmacusiLogo.png" alt="Amacusi Logo" />
+          <img src="../Images/AmacusiLogo.png" alt="Amacusi Logo" />
           <h3>Amacusi Admin</h3>
         </div>
 
@@ -32,7 +32,7 @@
               >
             </li>
             <li>
-              <a href="admin/orders.html"
+              <a href="../admin/orders.html"
                 ><i class="fas fa-shopping-bag"></i> Orders</a
               >
             </li>
@@ -45,7 +45,7 @@
               <a href="#"><i class="fas fa-users"></i> Customers</a>
             </li>
             <li>
-              <a href="admin/reports.html"
+              <a href="../admin/reports.html"
                 ><i class="fas fa-chart-bar"></i> Reports</a
               >
             </li>
