--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -17,10 +17,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Products</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../Pages/products.html">Products</a></li>
+          <li><a href="../Pages/about.html">About Us</a></li>
+          <li><a href="../Pages/contact.html">Contact</a></li>
           <li><a href="../Pages/profile.html" class="active">My Profile</a></li>
         </ul>
       </nav>
@@ -243,8 +243,8 @@
         </p>
         <p>Order ID: <span id="order-id"></span></p>
         <div class="confirmation-actions">
-          <a href="products.html" class="btn">Continue Shopping</a>
-          <a href="index.html" class="btn btn-outline">Back to Home</a>
+          <a href="../Pages/products.html" class="btn">Continue Shopping</a>
+          <a href="../index.html" class="btn btn-outline">Back to Home</a>
         </div>
       </div>
     </div>
