--- a/admin/orders.html
+++ b/admin/orders.html
@@ -27,7 +27,7 @@
         <nav class="sidebar-menu">
           <ul>
             <li>
-              <a href="admin.html"
+              <a href="../admin/admin.html"
                 ><i class="fas fa-tachometer-alt"></i> Dashboard</a
               >
             </li>
@@ -45,7 +45,7 @@
               <a href="#"><i class="fas fa-users"></i> Customers</a>
             </li>
             <li>
-              <a href="admin/reports.html"
+              <a href="../admin/reports.html"
                 ><i class="fas fa-chart-bar"></i> Reports</a
               >
             </li>
