--- a/admin/admin.html
+++ b/admin/admin.html
@@ -249,6 +249,6 @@
 
     <script type="module" src="admin/product.js"></script>
 
-    <script src="admin/admin.js"></script>
+    <script src="../admin/admin.js"></script>
   </body>
 </html>
