--- a/admin/admin.html
+++ b/admin/admin.html
@@ -247,7 +247,7 @@
       </div>
     </div>
 
-    <script type="module" src="admin/product.js"></script>
+    <script type="module" src="../admin/product.js"></script>
 
     <script src="../admin/admin.js"></script>
   </body>
