--- a/admin/reports.html
+++ b/admin/reports.html
@@ -12,8 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Open+Sans:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="admin/admin.css" />
-    <link rel="stylesheet" href="admin/reports.css" />
+    <link rel="stylesheet" href="../admin/admin.css" />
+    <link rel="stylesheet" href="../admin/reports.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
@@ -23,19 +23,19 @@
       <!-- Sidebar -->
       <aside class="sidebar">
         <div class="sidebar-header">
-          <img src="Images/AmacusiLogo.png" alt="Amacusi Logo" />
+          <img src="../Images/AmacusiLogo.png" alt="Amacusi Logo" />
           <h3>Amacusi Admin</h3>
         </div>
 
         <nav class="sidebar-menu">
           <ul>
             <li>
-              <a href="admin.html"
+              <a href="../admin/admin.html"
                 ><i class="fas fa-tachometer-alt"></i> Dashboard</a
               >
             </li>
             <li>
-              <a href="orders.html"
+              <a href="../admin/orders.html"
                 ><i class="fas fa-shopping-bag"></i> Orders</a
               >
             </li>
