--- a/admin/reports.html
+++ b/admin/reports.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../admin/admin.css" />
-    <link rel="stylesheet" href="../admin/reports.css" />
+    <link rel="stylesheet" href="../css/reports.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
@@ -373,7 +373,7 @@
       </main>
     </div>
 
-    <script type="module" src="admin/report.js"></script>
-    <script src="admin/admin.js"></script>
+    <script type="module" src="../admin/report.js"></script>
+    <script src="../admin/admin.js"></script>
   </body>
 </html>
