--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -220,7 +220,7 @@
           <p>
             You must
             <a
-              href="../pages/signUp.html"
+              href="../Pages/signUp.html"
               style="color: #4caf50; font-weight: 600"
               >sign in</a
             >
