--- a/admin/admin.html
+++ b/admin/admin.html
@@ -164,10 +164,10 @@
                 <label for="productCategory">Category</label>
                 <select id="productCategory" class="form-control" required>
                   <option value="">Select Category</option>
-                  <option value="poultry">Poultry</option>
-                  <option value="beef">Beef</option>
-                  <option value="pork">Pork</option>
-                  <option value="eggs">Eggs</option>
+                  <option value="Poultry">Poultry</option>
+                  <option value="Beef">Beef</option>
+                  <option value="Pork">Pork</option>
+                  <option value="Eggs">Eggs</option>
                 </select>
               </div>
             </div>
