--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -83,11 +83,11 @@
           </button>
 
           <div class="delivery-info">
-            <h3>Delivery Information</h3>
+            <!-- <h3>Delivery Information</h3>
             <p>
               Free delivery on all poultry orders over R500. Other products have
               a standard R50 delivery fee.
-            </p>
+            </p> -->
           </div>
         </section>
       </div>
