--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a
           href="Pages/Products.html"
           class="cta-button animate__animated animate__pulse animate__infinite"
-          >Browse Products</a
+          >View Products</a
         >
       </div>
     </section>
