--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -32,7 +32,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="../Pages/Products.html">Products</a></li>
           <li><a href="../Pages/about.html">About Us</a></li>
-          <li><a href="../Pages/contact.html">Contact</a></li>
+          <li><a href="../Pages/contacts.html">Contact</a></li>
           <li><a href="../Pages/profile.html" class="active">My Profile</a></li>
         </ul>
       </nav>
