--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -29,7 +29,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="products.html" class="active">Products</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contacts.html">Contact</a></li>
           <li><a href="../Pages/profile.html" class="active">My Profile</a></li>
         </ul>
       </nav>
