--- a/Pages/about.html
+++ b/Pages/about.html
@@ -28,7 +28,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="Products.html">Products</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contacts.html">Contact</a></li>
                 <li><a href="../Pages/profile.html" class="active">My Profile</a></li>
             </ul>
         </nav>
