--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="Pages/Products.html">Products</a></li>
           <li><a href="Pages/about.html">About Us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Pages/contacts.html">Contact</a></li>
           <li><a href="Pages/profile.html" class="active">My Profile</a></li>
         </ul>
       </nav>
